# legal-contract-review

./: Dockerfile  README.md  app.py  contracts.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
