[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "legal-contract-review"
version = "0.1.0"
description = "AI-powered legal contract review environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "groq",
    "openai"
]

[tool.setuptools]
packages = ["."]