cat > pyproject.toml << 'EOF'
[project]
name = "legal-contract-review"
version = "1.0.0"
description = "Legal Contract Review OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "openai==1.30.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
EOF